@@ -8,7 +8,7 @@
 
 <ul>
 {% for name in names  %}
-  <a href='/pics/{{ name  }}'>{{ name }}<br>
+  <a href='/pics/{{ name  }}'>{{ name }}</a><br>
 {% endfor %}
 </ul>
 
