@@ -10,7 +10,7 @@ This is leflerja's Web server
 <a href='/content'>Content</a><br>
 <a href='/files'>Files</a><br>
 <a href='/images'>Images</a><br>
-<a href='/images_thumb'>Images (Thumbnail Gallery)</a><br>
+<a href='/images_thumb'>Thumbnail Images</a><br>
 <a href='/form'>Form</a>
 
 {% endblock body %}
