@@ -87,11 +87,17 @@
  * ref-server.py: Removed
  * twill-tests: Added all twill tests
  * images: Added 2 more images to test the project
- * Project: I did project 5 and made the /images_thumb page out thumbnails of
-            the images. It is listed in the index.html page and is tested like
-            all the other pages.
 
 2014-03-16  Jason Lefler <leflerja@arctic.cse.msu.edu>
 
  * render.py: Removed
+ * test_server.py: Updated to send arguments to main()
+ * images.html: Fixed the href tag
+ * images_thumb.html: Fixed the href tag
+ * Project 5: I created an /images_thumb page out of the thumbnails of the
+       images from the /images page. It is listed in index.html and is tested
+       like all the other pages. The html (images_thumb.html) loops through
+       the images, displaying them (reduced to 50 X 50 pixels), 4 per row. Like
+       images.html, they are in alphabetic order, and will appear on a new page
+       in full size if the image is selected.
 
